assets/css/custom.css
/* Sidebar menu */
.sidebar-taxonomy ul {
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
    margin: 0;
}

/* Entries */
.openarchaeo-item {
  margin: 0 0 2em 0;
}

.openarchaeo-item-name,
.openarchaeo-item-description,
.openarchaeo-item-description p {
  display: inline;
}

.openarchaeo-item-name {
  font-weight: bold;
}

.openarchaeo-item-name:after {
  content: ":";
}

